--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,5 @@ minecraft_version=1.21.1
 # Dependencies
 fabric_loader_version=0.18.1
 neoforge_version=21.1.200
+
+noesis_java_version=NoesisGuiJava-1.0-pre-4
