--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,5 +13,5 @@ dependencies {
     // which get remapped to the correct annotations on each platform.
     // Do NOT use other classes from Fabric Loader.
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
-    implementation files("libs/NoesisGuiJava-1.0-pre-1.jar")
+    implementation files("libs/${rootProject.noesis_java_version}.jar")
 }
