--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -26,8 +26,7 @@ configurations {
 
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
-
-
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_version}"
 
     minecraftRuntimeLibraries files("libs/${rootProject.noesis_java_version}.jar")
     minecraftClientRuntimeLibraries files("libs/${rootProject.noesis_java_version}.jar")
