--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ enabled_platforms=fabric,neoforge
 minecraft_version=1.21.1
 # Dependencies
 fabric_loader_version=0.18.1
+fabric_version=0.116.7+1.21.1
 neoforge_version=21.1.200
 
 noesis_java_version=NoesisGuiJava-1.0-pre-4
