--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     neoForge "net.neoforged:neoforge:$rootProject.neoforge_version"
 
 
+    minecraftRuntimeLibraries files("libs/${rootProject.noesis_java_version}.jar")
+    minecraftClientRuntimeLibraries files("libs/${rootProject.noesis_java_version}.jar")
+    minecraftServerRuntimeLibraries files("libs/${rootProject.noesis_java_version}.jar")
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
 }
